Fix line wrapping in preview panes

--- a/src/extensions/core/editor/editor.css
+++ b/src/extensions/core/editor/editor.css
@@ -211,8 +211,7 @@ body {
 
 .preview-area {
   height: 100%;
-  white-space: pre;
-  word-wrap: break-word;
+  white-space: pre-wrap;
   overflow-y: auto;
 }
 
